# minecraft_clone_rust

./: Cargo.toml  TODO  je sais pas
src/: block.rs  camera.rs  chunk.rs  constant.rs  custom_mesh.rs  gui.rs  input.rs  main.rs  player.rs  render.rs  texture.rs  utils.rs  world.rs
