[package]
name = "minecraft_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_egui = "0.28.0"
bevy_panorbit_camera = "0.19.1"
bytemuck = "1.16.1"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rand = "0.8.5"
splines = "4.3.1"

[dev-dependencies]
criterion = "0.5.1"

#[dependencies.bevy]
#default-features = false
#version = "0.14.0"

[profile.dev]
opt-level = 1
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
incremental = false
debug = false
